name:                haskellrank
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskellrank#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable functional-programming-the-sums-of-powers
  hs-source-dirs:      src
  main-is:             SumsOfPowers.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable bon-apetit
  hs-source-dirs:      src
  main-is:             BonAppetit.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable CoinChange
  hs-source-dirs:      src
  main-is:             CoinChange.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, vector
  
executable list-gcd
  hs-source-dirs:      src
  main-is:             GCD.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
