cabal-version:      2.4
name:               haskellrank
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common shared-properties
    ghc-options: -v0 -O2
    default-language: Haskell2010
    build-depends: base ^>=4.14.3.0, vector, mtl, primitive

library
    import: shared-properties
    hs-source-dirs:   src
    exposed-modules: Fences, BST, PrisonTransport

executable haskellrank
    import: shared-properties
    main-is:          Main.hs
    build-depends: haskellrank

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    hs-source-dirs:   app


benchmark fences-benchmarks
          import: shared-properties
          type: exitcode-stdio-1.0
          hs-source-dirs: benchmark
          main-is: fences-benchmark.hs
          build-depends: criterion, random, haskellrank
          
