cabal-version:      2.4
name:               larris-algorithm-hs
version:            0.1.0.0
author:             jglara
maintainer:         jglara@gmail.com
extra-source-files: CHANGELOG.md

executable larris-algorithm-hs
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
